--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+frontend/node_modules
+backend/node_modules
 dist
 dist-ssr
 *.local
@@ -23,4 +26,7 @@ dist-ssr
 *.sln
 *.sw?
 
+# Environment variables
 .env
+frontend/.env
+backend/.env
